--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -333,7 +333,7 @@ div.item_gallery div.main_image {
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
-	height: 300px;
+	height: 350px;
 }
 
 div.item_gallery div.main_image {
@@ -349,11 +349,13 @@ div.item_gallery div.main_image img {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	opacity: 0;
+	visibility: hidden;
 	transition: all 0.3s;
 }
 
 div.item_gallery div.main_image img.visible {
 	opacity: 1;
+	visibility: visible;
 }
 
 div.item_gallery div.thumbnails {
